@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>ruby</herd>
+  <herd>ruby</herd>
+  <upstream>
+    <remote-id type="github">taf2/curb</remote-id>
+  </upstream>
 </pkgmetadata>
