@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/curb
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/curb/ChangeLog,v 1.10 2015/04/11 05:22:45 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/curb/ChangeLog,v 1.11 2015/06/07 17:34:52 jlec Exp $
+
+  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add github to remote-id in metadata.xml
 
 *curb-0.8.8 (11 Apr 2015)
 
